--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,8 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.11.9"
+    "express-validator": "^6.9.2",
+    "mongoose": "^5.11.9",
+    "node-mocks-http": "^1.9.0"
   }
 }
