--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "supertest": "^6.0.1"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
